<resources>
    <string name="app_name">Whatsapp-ProfileCollapsingToolbar</string>
    <string name="last_seen">last seen</string>
    <string name="name">name</string>
    <string name="button_submit_text">submit</string>
    <string name="dot">●</string>
    <string name="username_hint">شناسه کاربری</string>
    <string name="phone_number_hint">شماره موبایل</string>
    <string name="bio_hint">شرح حال</string>
    <string name="shared_media_text">رسانه ها</string>
    <string name="all_shared_media">همه</string>
    <string name="notification_setting">نوتیفیکیشن</string>
    <string name="notification_status_on">فعال</string>
    <string name="notification_status_off">غیر فعال</string>
    <string name="delete_chat_history">حذف تاریخچه گفتگو</string>
    <string name="block_user">مسدود کردن کاربر</string>
    <string name="group_member_list">لیست اعضای گروه</string>
    <string name="all_group_member">همه</string>
    <string name="group_profile">Group Profile</string>
    <string name="chat_profile">chat profile</string>
    <string name="group_description_hint">توضیحات</string>
    <string name="group_description">توضیحات گروه توضیحات گروه توضیحات گروه توضیحات گروه توضیحات گروه</string>
</resources>
