<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:id="@+id/edit_text_name"
        android:inputType="text"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/last_seen"
        android:layout_below="@id/edit_text_name"
        android:id="@+id/edit_text_last_seen"
        android:inputType="text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_submit"
        android:layout_below="@id/edit_text_last_seen"
        android:text="@string/button_submit_text"
        android:onClick="onSubmitClicked"/>

    <include layout="@layout/profile_info"
        android:layout_below="@id/button_submit"
        android:id="@+id/profile_info_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <include layout="@layout/shared_media"
        android:id="@+id/shared_media"
        android:layout_below="@id/profile_info_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <include layout="@layout/chat_profile_setting"
        android:id="@+id/chat_profile_setting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shared_media" />

</RelativeLayout>