<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_notification_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/notification_setting"
        tools:ignore="RelativeOverlap" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/text_view_notification_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="changeNotificationStatus"
        android:text="@string/notification_status_on"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:theme="@style/Widget.AppCompat.Button.Borderless" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/text_view_delete_chat_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/text_view_notification_setting"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="clearChatHistory"
        android:text="@string/delete_chat_history"
        style="@style/Widget.AppCompat.Button.Borderless" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/text_view_block_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/text_view_delete_chat_history"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="blockUser"
        android:text="@string/block_user"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:theme="@style/Widget.AppCompat.Button.Borderless" />

</RelativeLayout>