<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_view_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textColor="@color/blue"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/username_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/text_view_username"
        android:layout_alignParentTop="true"
        android:layout_alignTop="@id/text_view_username"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_toLeftOf="@id/text_view_username"
        android:layout_toStartOf="@id/text_view_username"
        android:gravity="center"
        android:text="@string/dot"
        android:textSize="8sp"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/text_view_username_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_toLeftOf="@id/username_dot"
        android:layout_toStartOf="@id/username_dot"
        android:text="@string/username_hint" />

    <TextView
        android:id="@+id/text_view_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/text_view_username"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/phone_number_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/text_view_phone_number"
        android:layout_alignTop="@id/text_view_phone_number"
        android:layout_below="@id/text_view_username"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_toLeftOf="@id/text_view_phone_number"
        android:layout_toStartOf="@id/text_view_phone_number"
        android:gravity="center"
        android:text="@string/dot"
        android:textSize="8sp"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/text_view_phone_number_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_username"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_toLeftOf="@id/phone_number_dot"
        android:layout_toStartOf="@id/phone_number_dot"
        android:text="@string/phone_number_hint" />

    <TextView
        android:id="@+id/text_view_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/text_view_phone_number"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />

    <TextView
        android:id="@+id/bio_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/text_view_bio"
        android:layout_alignTop="@id/text_view_bio"
        android:layout_below="@id/text_view_phone_number"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_toLeftOf="@id/text_view_bio"
        android:layout_toStartOf="@id/text_view_bio"
        android:gravity="center"
        android:text="@string/dot"
        android:textSize="8sp"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/text_view_bio_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_phone_number"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_toLeftOf="@id/bio_dot"
        android:layout_toStartOf="@id/bio_dot"
        android:text="@string/bio_hint" />

</RelativeLayout>