<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/photo"
                    app:layout_collapseMode="parallax" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                    <include
                        android:id="@+id/toolbar_header_view"
                        layout="@layout/widget_header_view_top"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <include
            android:id="@+id/float_header_view"
            layout="@layout/widget_header_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/scrollView"
            app:layout_behavior="com.anton46.whatsapp_profile.WhatsappHeaderBehavior" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:id="@+id/edit_text_name"
                    android:inputType="text"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_seen"
                    android:layout_below="@id/edit_text_name"
                    android:id="@+id/edit_text_last_seen"
                    android:inputType="text"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_submit"
                    android:layout_below="@id/edit_text_last_seen"
                    android:text="@string/button_submit_text"
                    android:onClick="onSubmitClicked"/>

                <include layout="@layout/profile_info"
                    android:id="@+id/profile_info_layout"
                    android:layout_below="@id/button_submit"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

                <include layout="@layout/shared_media"
                    android:layout_below="@id/profile_info_layout"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>

            </RelativeLayout>
        </android.support.v4.widget.NestedScrollView>

        <!--<include layout="@layout/chat_profile_fab"-->
            <!--app:layout_anchorGravity="bottom|end|right"-->
            <!--app:layout_anchor="@id/main_content"/>-->

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>